@startuml
skinparam monochrome true
hide empty members

abstract class EntityBase {
}

EntityBase <|-- IdentifiableEntity

abstract class IdentifiableEntity {
    Id: Guid
}

IdentifiableEntity <|-- Species

abstract class Species {
    DateOfBirth: DateOfBirth
    Gender: Gender?
}

Species <|-- Person

class Person {
    FirstName: FirstName
    LastName: LastName
    Handedness: Handedness?
    BloodGroup: BloodGroup?
    Profession: Profession
}

@enduml
